Final submitted version of proposal

--- a/bibliography.yaml
+++ b/bibliography.yaml
@@ -128,4 +128,19 @@ references:
   issued: 2013
   publisher: Pearson International
   publisher-place: Harlow, England
+- id: larman
+  title: 'Iterative and Incremental Development: A Brief History'
+  author:
+  - family: Larman
+    given: Craig
+  - family: Basili
+    given: Victor R.
+  type: webpage
+  URL: https://www.cs.umd.edu/~basili/publications/journals/J90.pdf
+  issued: 2003
+  accessed:
+    date-parts:
+    - - 2017
+      - 07
+      - 29
 ...
